--- a/android/Sara/app/src/main/res/layout/fragment_home.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_home.xml
@@ -55,7 +55,7 @@
                                 android:textAlignment="textEnd"
                                 android:textColor="@color/sara_blue"
                                 android:textSize="@dimen/text_title_size"
-                                android:textStyle="bold" />
+                                android:fontFamily="@font/pretendard_bold" />
 
                             <TextView
                                 android:id="@+id/textView4"
@@ -97,7 +97,7 @@
                                 android:layout_weight="1"
                                 android:text="@string/text_button_upload"
                                 android:textSize="@dimen/text_button_size"
-                                android:textStyle="bold"
+                                android:fontFamily="@font/pretendard_bold"
                                 app:cornerRadius="@dimen/corner_radius_2"
                                 app:icon="@drawable/ic_upload"
                                 app:iconGravity="textStart" />
@@ -113,7 +113,7 @@
                                 android:text="@string/text_button_search"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/text_button_size"
-                                android:textStyle="bold"
+                                android:fontFamily="@font/pretendard_bold"
                                 app:cornerRadius="@dimen/corner_radius_2"
                                 app:icon="@drawable/ic_search"
                                 app:iconGravity="textStart"
