--- a/android/Sara/app/src/main/res/layout/fragment_image_result.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_image_result.xml
@@ -15,49 +15,42 @@
         android:layout_height="match_parent"
         tools:context=".ui.home.ImageResultFragment">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/top_bar_height"
-                android:layout_marginTop="@dimen/status_bar_height"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/btn_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:src="@drawable/ic_arrow" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/gap_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    android:layout_weight="1"
-                    android:text="@string/text_title_result"
-                    android:textSize="@dimen/text_top_title_size"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </LinearLayout>
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="@dimen/status_bar_height"
             android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/top_bar_height"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/btn_back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="@dimen/default_margin"
+                        android:src="@drawable/ic_arrow" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="@dimen/gap_margin"
+                        android:layout_marginEnd="@dimen/default_margin"
+                        android:layout_weight="1"
+                        android:text="@string/text_title_result"
+                        android:textSize="@dimen/text_top_title_size"
+                        android:fontFamily="@font/pretendard_bold" />
+                </LinearLayout>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -91,6 +84,8 @@
                     app:cardMaxElevation="0dp">
 
                     <LinearLayout
+                        android:id="@+id/content_view"
+                        android:background="?attr/selectableItemBackground"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
@@ -130,7 +125,7 @@
                         app:boxCornerRadiusTopStart="@dimen/corner_radius"
                         app:boxStrokeColor="@color/text_field_stroke_color"
                         app:counterEnabled="true"
-                        app:counterMaxLength="30"
+                        app:counterMaxLength="20"
                         app:endIconMode="clear_text"
                         app:errorEnabled="true"
                         app:errorIconTint="@color/sara_red">
@@ -182,7 +177,7 @@
                         app:iconTint="@color/black" />
 
                     <Button
-                        android:id="@+id/button4"
+                        android:id="@+id/btn_share"
                         style="@style/SaraButtonStyleSecond"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/basic_button_height"
