--- a/android/Sara/app/src/main/res/layout/fragment_splash.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_splash.xml
@@ -11,6 +11,7 @@
         android:id="@+id/logo"
         android:layout_width="@dimen/logo_width"
         android:layout_height="@dimen/logo_height"
+        android:alpha="0"
         android:src="@drawable/ic_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_sara_normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/logo" />
 </androidx.constraintlayout.motion.widget.MotionLayout>
