--- a/android/Sara/app/src/main/res/values/themes.xml
+++ b/android/Sara/app/src/main/res/values/themes.xml
@@ -16,12 +16,13 @@
         <!-- Customize your theme here. -->
         <item name="android:letterSpacing">-0.015</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/pretendard_medium</item>
     </style>
 
     <style name="SaraButtonStylePrimary" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_button_size</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:backgroundTint">@color/sara_blue</item>
         <item name="cornerRadius">@dimen/corner_radius</item>
         <item name="android:outlineProvider">none</item>
@@ -34,7 +35,7 @@
     <style name="SaraButtonStyleSecond" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/text_button_size</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/pretendard_bold</item>
         <item name="android:backgroundTint">@color/sara_lightGray</item>
         <item name="cornerRadius">@dimen/corner_radius</item>
         <item name="android:outlineProvider">none</item>
