2차 디버깅 완료
디버깅 내용 :
키보드 올라올 때 자동스크롤 안되는 현상
네트워크 요청 취소
백스택 점검
갤러리 프래그먼트 프래그먼트 state에 따른 observe, state, init 이슈

--- a/android/Sara/app/src/main/res/layout/fragment_image_result.xml
+++ b/android/Sara/app/src/main/res/layout/fragment_image_result.xml
@@ -16,20 +16,26 @@
         tools:context=".ui.home.ImageResultFragment">
 
         <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/status_bar_height"
             android:fillViewport="true">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/top_bar_height"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <ImageView
                         android:id="@+id/btn_back"
@@ -47,12 +53,13 @@
                         android:layout_marginStart="@dimen/gap_margin"
                         android:layout_marginEnd="@dimen/default_margin"
                         android:layout_weight="1"
+                        android:fontFamily="@font/pretendard_bold"
                         android:text="@string/text_title_result"
-                        android:textSize="@dimen/text_top_title_size"
-                        android:fontFamily="@font/pretendard_bold" />
+                        android:textSize="@dimen/text_top_title_size" />
                 </LinearLayout>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin"
@@ -60,7 +67,10 @@
                     android:backgroundTint="@color/sara_lightGray"
                     app:cardCornerRadius="@dimen/corner_radius_4"
                     app:cardElevation="0dp"
-                    app:cardMaxElevation="0dp">
+                    app:cardMaxElevation="0dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                     <ImageView
                         android:id="@+id/image"
@@ -73,21 +83,25 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/gap_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
                     app:cardBackgroundColor="@color/sara_lightGray"
                     app:cardCornerRadius="@dimen/corner_radius_4"
                     app:cardElevation="0dp"
-                    app:cardMaxElevation="0dp">
+                    app:cardMaxElevation="0dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cardView3">
 
                     <LinearLayout
                         android:id="@+id/content_view"
-                        android:background="?attr/selectableItemBackground"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="?attr/selectableItemBackground"
                         android:orientation="vertical">
 
                         <TextView
@@ -104,25 +118,30 @@
                 </androidx.cardview.widget.CardView>
 
                 <FrameLayout
-                    android:layout_width="match_parent"
+                    android:id="@+id/frameLayout2"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/default_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    android:layout_marginBottom="@dimen/gap_margin"
-                    android:animateLayoutChanges="true">
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="4dp"
+                    android:animateLayoutChanges="true"
+                    app:layout_constraintBottom_toTopOf="@+id/btn_save"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/text_field"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:visibility="gone"
                         app:boxBackgroundColor="@color/sara_lightGray"
-                        app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
-                        app:boxCornerRadiusBottomStart="@dimen/corner_radius"
-                        app:boxCornerRadiusTopEnd="@dimen/corner_radius"
-                        app:boxCornerRadiusTopStart="@dimen/corner_radius"
+                        app:boxCornerRadiusBottomEnd="@dimen/default_margin"
+                        app:boxCornerRadiusBottomStart="@dimen/default_margin"
+                        app:boxCornerRadiusTopEnd="@dimen/default_margin"
+                        app:boxCornerRadiusTopStart="@dimen/default_margin"
                         app:boxStrokeColor="@color/text_field_stroke_color"
                         app:counterEnabled="true"
                         app:counterMaxLength="20"
@@ -137,6 +156,7 @@
                             android:hint="@string/text_save_hint"
                             android:imeOptions="actionGo"
                             android:inputType="textMultiLine"
+                            android:maxEms="20"
                             android:maxLength="30"
                             android:text="@={viewModel.freeText}"
                             android:textColor="@color/sara_gray" />
@@ -146,22 +166,29 @@
                 <Button
                     android:id="@+id/btn_save"
                     style="@style/SaraButtonStylePrimary"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     android:height="@dimen/basic_button_height"
                     android:text="컬렉션에 저장하기"
                     app:icon="@drawable/ic_save"
-                    app:iconGravity="textStart" />
+                    app:iconGravity="textStart"
+                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <LinearLayout
+                    android:id="@+id/linearLayout2"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/gap_margin"
-                    android:layout_marginEnd="@dimen/default_margin"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <Button
                         android:id="@+id/btn_recall"
@@ -190,7 +217,7 @@
                         app:iconTint="@color/black" />
                 </LinearLayout>
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
         <include
